--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -10,8 +10,8 @@
   <body>
     <p class="odd-number">Number 1 - I'm a class!</p>
     <div id="one">Number 2 - I'm one ID.</div>
-    <p class="odd-number cooler">Number 3 - I'm a class, but cooler!</p>
-    <div id="another">Number 4 - I'm another ID.</div>
+    <p class="odd-number adjust-font-size">Number 3 - I'm a class, but cooler!</p>
+    <div id="another" class="adjust-font-size">Number 4 - I'm another ID.</div>
     <p class="odd-number">Number 5 - I'm a class!</p>
   </body>
 </html>
